# hello-py-k8s-envoy-example

./: .gitignore  README.md  hello-gateway.yaml  hello-greeter.yaml  hello-py.yaml  hello.yaml
envoy-config/: envoy-hello-gateway.yaml  envoy-hello-greeter.yaml  envoy-hello-py.yaml
hello-py/: Dockerfile  main.py  pyproject.toml
hello-py/hello/: gateway.py  greeter_server.py  helloworld_pb2.py  helloworld_pb2_grpc.py
hello-py/hello/proto/hello/: helloworld.proto
